# expenses-tracker

./: .env.example  LICENSE  README.md  docker-compose.yml
.github/workflows/: backend-ci.yml
backend/: pyproject.toml
backend/alembic/: env.py
backend/app/: config.py  database.py  main.py
backend/tests/integration/: test_health.py
backend/tests/unit/: test_config.py
