[project]
name = "backend"
version = "0.1.0"
description = "Backend API for the Expenses Manager application."
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.139.0",
    "pydantic-settings>=2.14.2",
]

[dependency-groups]
dev = [
    "httpx2>=2.6.0",
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]

[tool.ruff]
lint.extend-select = [
    "PTH",
    "FAST",
    "I",
    "ANN",
    "UP",
    "B",
    "PT",
]

[tool.fastapi]
entrypoint = "app.main:app"
